--- a/NZ_ESports_Leauge_Management_Assignment.csproj
+++ b/NZ_ESports_Leauge_Management_Assignment.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -79,6 +94,12 @@
     <Compile Include="ArenaForm.Designer.cs">
       <DependentUpon>ArenaForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ArenaReportForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ArenaReportForm.Designer.cs">
+      <DependentUpon>ArenaReportForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ChallengeForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -145,14 +166,26 @@
     <EmbeddedResource Include="ArenaForm.resx">
       <DependentUpon>ArenaForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ArenaReportForm.resx">
+      <DependentUpon>ArenaReportForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ChallengeForm.resx">
       <DependentUpon>ChallengeForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CompetitorChallengeForm.resx">
+      <DependentUpon>CompetitorChallengeForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CompetitorForm.resx">
+      <DependentUpon>CompetitorForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CompetitorReportForm.resx">
       <DependentUpon>CompetitorReportForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DataModule.resx">
       <DependentUpon>DataModule.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EventForm.resx">
+      <DependentUpon>EventForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EventReportForm.resx">
       <DependentUpon>EventReportForm.cs</DependentUpon>
@@ -204,6 +237,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
